--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,19 @@ services:
   redis:
     image: redis
     container_name: myredis
+    ports:
+      - "6379:6379"
   mongo:
     image: mongo
     container_name: mymongo
+    ports:
+      - "27017:27017"
+      - "27018:27018"
   cassandra:
     image: cassandra
     container_name: mycassandra
+    ports:
+      - "9042:9042"
   neo4j:
     image: neo4j
     environment:
